--- a/BokuNoHeroAcademia.theme.css
+++ b/BokuNoHeroAcademia.theme.css
@@ -204,7 +204,7 @@
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
 .theme-dark .message-group .edit-message .edit-operation,
-.theme-dark .message-group .comment .edited{
+.theme-dark .edited-DL9ECl{
     color: white;
 }
 .theme-dark .iconForeground-1w5n7R {
