--- a/BokuNoHeroAcademia.theme.css
+++ b/BokuNoHeroAcademia.theme.css
@@ -164,7 +164,7 @@
     color: white;
     background: #668B99;
 }
-.theme-dark .divider-3gKybi:before, .theme-dark .divider-3gKybi.dividerRed-MKoLlr>span {
+.theme-dark .divider-3gKybi:before {
      background: transparent;
 }
 .theme-dark .iconBadge-2dji3k {
