--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -1472,9 +1472,12 @@ box-shadow: none;
    border-radius: 0px;
 }
 .mask-3OgeRz {
-    border-radius: 0;
+    border-radius: 0 !important;
     -webkit-mask: none;
     mask: none;
+} 
+.content-OzHfo4 .small-5Os1Bb {
+     border-radius: 0;
 }
 .status-oxiHuE {
     border-radius: 0px;
