--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -10,11 +10,11 @@
 .container-PNkimc,
 .container-2lgZY8,
 .theme-dark .guildsWrapper-5TJh6A,
-.theme-dark .chat form,
-.theme-dark .chat>.content,
-.theme-dark .chat,
+.theme-dark .chat-3bRxxu form,
+.theme-dark .content-yTz4x3,
+.theme-dark .chat-3bRxxu,
 .chat .messages,
-.theme-dark .friends-table,.theme-dark .messages-wrapper,
+.theme-dark .friends-table,.theme-dark .messagesWrapper-3lZDfY,
 .theme-dark .members-1998pB,
 .theme-dark #friends,
 .theme-dark .headerBar-UHpsPw,
@@ -699,21 +699,15 @@ a {
     background-color: black !important;
 }
 .theme-dark .friends-table .messages .divider:not(.red) span, 
-.theme-dark .messages-wrapper .messages .divider:not(.red) span {
+.theme-dark .messagesWrapper-3lZDfY .messages .divider:not(.red) span {
     color: silver;
 }
-.theme-dark .friends-table .messages .divider.divider-red>div, 
-.theme-dark .messages-wrapper .messages .divider.divider-red>div,
-.theme-dark .friends-table .messages .divider:not(.red) div, 
-.theme-dark .messages-wrapper .messages .divider:not(.red) div,
-.theme-dark .friends-table .messages .divider:before, 
-.theme-dark .friends-table .messages .divider span, 
-.theme-dark .messages-wrapper .messages .divider:before, 
-.theme-dark .messages-wrapper .messages .divider span{
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr>div,
+.theme-dark .divider-3gKybi:not(.red-1YQ4s7) div,
+.theme-dark .divider-3gKybi:before, .theme-dark .divider-3gKybi span{
     background: transparent;
 }
-.theme-dark .friends-table .messages .divider.divider-red>span, 
-.theme-dark .messages-wrapper .messages .divider.divider-red>span {
+.theme-dark .divider-3gKybi.dividerRed-MKoLlr>span {
     color: black;
     background: #d1aa4c;
     padding: 3px 6px;
@@ -946,17 +940,17 @@ a {
     background: #d1aa4c;
     color: black;
 }
-.theme-dark .chat .jump-to-present-bar,
-.chat .new-messages-bar {
+.theme-dark .jumpToPresentBar-9P20AM,
+.newMessagesBar-mujexs {
     background-color: #d1aa4c !important;
 }
-.chat .jump-to-present-bar button:last-child,
-.chat .jump-to-present-bar button,
-.chat .new-messages-bar button,
-.chat .new-messages-bar button:last-child {
+.jumpToPresentBar-9P20AM button:last-child:last-child,
+.jumpToPresentBar-9P20AM button,
+.newMessagesBar-mujexs button,
+.newMessagesBar-mujexs button:last-child {
     color: black;
 }
-.theme-dark .chat .has-more button {
+.theme-dark .hasMore-3e72_v button {
     background: rgba(0,0,0,0.6);
     border: none;
     color: white;
