--- a/Bubble.theme.css
+++ b/Bubble.theme.css
@@ -325,7 +325,7 @@
     background-color: #E7FEFF;
 }
 
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
