--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -391,10 +391,10 @@ a,
     margin-left: -5px;
     margin-right: 6px;
 }
-.theme-dark .message-group .edit-message .edit-operation {
+.theme-dark .theme-dark .operations-36ENbA {
     color: rgb(255, 255, 255);
 }
-.message-group .edit-message .edit-operation>a {
+.theme-dark .operations-36ENbA>a {
     color: #840058;
 }
 /* Bot Tag */
