--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -911,10 +911,10 @@ a {
     border-left: 1px solid #e53b0a;
     border-right: 1px solid #e53b0a;
 }
-.message-group .edit-message .edit-operation>a {
+.theme-dark .operations-36ENbA>a {
     color: #e53b0a;
 }
-.theme-dark .message-group .edit-message .edit-operation,.theme-dark .edited-DL9ECl {
+.theme-dark .theme-dark .operations-36ENbA,.theme-dark .edited-DL9ECl {
     color: white;
 }
 .theme-dark .guild-1EfMGQ .guildInner-3DSoA4 a {
