--- a/TouhouKnowledge.theme.css
+++ b/TouhouKnowledge.theme.css
@@ -505,10 +505,10 @@ a,
 .theme-dark .markup-2BOw-j code.inline {
     background: rgba(0,0,0,0.3);
 }
-.message-group .edit-message .edit-operation>a {
+.theme-dark .operations-36ENbA>a {
     color: #EFD9C3;
 }
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl {
     color: white;
 }
