--- a/BokuNoHeroAcademia.theme.css
+++ b/BokuNoHeroAcademia.theme.css
@@ -203,7 +203,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -211,7 +211,7 @@
     fill: white;
 }
 
-.message-group .edit-message .edit-operation>a {
+.theme-dark .operations-36ENbA>a {
     color: #668B99;
 }
 .small-5Os1Bb .statusTyping-2ed9jJ {
