--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -304,7 +304,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .message-group .edit-message .edit-operation,
+.theme-dark .theme-dark .operations-36ENbA,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
